feat: prepare for Render + Vercel deployment
- Externalize all secrets to env vars (JWT_SECRET, DB_*, FRONTEND_URL, ML_SERVICE_URL)
- Add application-prod.yml for PostgreSQL on Render
- Add PostgreSQL driver to pom.xml
- Add V5 Flyway migration for PostgreSQL compatibility
- Update SecurityConfig CORS to read from FRONTEND_URL env var
- Update TrainingServiceImpl + PredictionServiceImpl to use ML_SERVICE_URL env var
- Add Spring_Backend/Dockerfile (multi-stage JDK21 build)
- Add render.yaml (Spring Boot + ML service + PostgreSQL DB)
- Update ml-service/api.py: MODEL_DIR env var, CORS middleware, /health endpoint, PORT env var
- Update ml-service/fl/server.py: MODEL_DIR env var for model persistence
- Update frontend/src/api.js: VITE_API_URL env var
- Add frontend/vercel.json: SPA routing rewrites
- Add .env.example: documents all required env vars
- Add root .gitignore: excludes secrets, model binaries, build artifacts